<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:padding="16dip"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/tutorial_background">

  <TextView
    android:id="@+id/Header"
    android:layout_alignParentTop="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:layout_marginBottom="8dip"
    android:text="@string/tutorial_header" />

  <ScrollView
    android:layout_below="@+id/Header"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@+id/ButtonContainer">

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:layout_alignParentTop="true">
  
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:gravity="fill_horizontal">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="12dip"
          android:src="@drawable/tutorial_dpad"/>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginBottom="2dip"
            android:text="@string/tutorial_header_dpad" />
          <TextView
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_desc_dpad" />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:gravity="fill_horizontal">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="12dip"
          android:src="@drawable/tutorial_webmode"/>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginBottom="2dip"
            android:text="@string/tutorial_header_webmode" />
          <TextView
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_desc_webmode" />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:gravity="fill_horizontal">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="12dip"
          android:src="@drawable/tutorial_volume"/>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginBottom="2dip"
            android:text="@string/tutorial_header_volume" />
          <TextView
            android:textColor="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_desc_volume" />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:id="@+id/ButtonContainer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center">
    <Button
      android:id="@+id/tutorial_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:paddingLeft="26dip"
      android:paddingRight="26dip"
      android:text="@string/tutorial_button"/>
  </LinearLayout>

</RelativeLayout>